--- a/src/components/Highlights.module.scss
+++ b/src/components/Highlights.module.scss
@@ -7,7 +7,7 @@
     margin-bottom: 3rem;
   }
 
-  &__highlights-container {
+  &__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 4.8rem;
