--- a/src/components/UnitSwitch.module.scss
+++ b/src/components/UnitSwitch.module.scss
@@ -17,7 +17,7 @@
     font-weight: 700;
     cursor: pointer;
 
-    &--selected {
+    &_selected {
       color: $dark-text;
       background-color: $primary-text;
     }
